objects/Migration_Error__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <summarizedField>Migration_Error_Detail__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Error_Detail__c.Error_Message__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Error_Detail__c.Migration_Error__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migration_Statistics__c</fullName>
        <label>Migration Statistics</label>
        <referenceTo>Migration_Statistics__c</referenceTo>
        <relationshipLabel>Migration Errors</relationshipLabel>
        <relationshipName>Migration_Errors1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Missing_Reference_Details__c</fullName>
        <label>Missing Reference Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Reference__c</fullName>
        <label>Missing Reference</label>
        <summarizedField>Migration_Error_Detail__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Error_Detail__c.Error_Message__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Error_Detail__c.Migration_Error__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <description>Test Field to verfify AN Validation only option</description>
        <label>Test Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Migration Error</label>
    <nameField>
        <displayFormat>MED-{0000}</displayFormat>
        <label>Migration Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>